[package]
name = "fvm-rs-sdk"
version = "0.0.1"
authors = ["Protocol Labs", "Polyphene <contact@polyphene.io>"]
edition = "2018"
license = "MIT"
description = "This crate provides an interface for developers to build actors to deploy on the Filecoin chain."
readme = "README.md"
homepage = "http://fvm.filecoin.io"
keywords = ["fvm", "sdk"]
categories = ["api-bindings"]