[workspace]
resolver = "2"
members = [
    "sdk",
    "macro",
    "backend",
    "macro-support"
]

exclude = [
    "examples/sdk-example-actor"
]

[patch.crates-io]
fvm_ipld_encoding = { path = "./ref-fvm/ipld/encoding" }
fvm_shared = { path = "./ref-fvm/shared" }
fvm_ipld_blockstore = { path = "./ref-fvm/ipld/blockstore" }