[package]
name = "fvm_rs_sdk_backend"
version = "0.1.0"
authors = ["Protocol Labs", "Polyphene <contact@polyphene.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Backend crate for the Filecoin Virtual Macro Rust SDK procedural macro."
homepage = "http://fvm.filecoin.io"
keywords = ["fvm", "sdk"]

[features]
extra-traits = ["syn/extra-traits"]
spans = []

[dependencies]
anyhow = "^1.0.58"
cfg-if = "^1.0.0"
proc-macro2 = "^1.0.40"
quote = "^1.0.20"
syn = { version = "^1.0.98", features = ["full"] }
thiserror = "^1.0.31"