[package]
name = "fvm_rs_sdk_macro_support"
version = "0.1.0"
authors = ["Protocol Labs", "Polyphene <contact@polyphene.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Support crate for the procedural macro for the Filecoin Virtual Machine Rust SDK."
homepage = "http://fvm.filecoin.io"
keywords = ["fvm", "sdk"]

[features]
extra-traits = ["syn/extra-traits"]
strict-macro = []

[dependencies]
fvm_rs_sdk_backend = { path="../backend", version="0.1.0" }
quote = "^1.0.20"
proc-macro2 = "^1.0.40"
syn = { version = "^1.0.98", features = ["visit", "full"] }
thiserror = "1.0.31"