[package]
name = "fvm-rs-sdk-macro"
version = "0.0.1"
authors = ["Protocol Labs", "Polyphene <contact@polyphene.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Procedural macro for the Filecoin Virtual Machine Rust SDK."
homepage = "http://fvm.filecoin.io"
keywords = ["fvm", "sdk"]

[lib]
proc-macro = true

[dependencies]
quote = "^1.0.9"
fvm-rs-sdk-macro-support = { path="../macro-support", version="0.0.1" }

[dev-dependencies]
trybuild = "^1.0.63"
fvm-rs-sdk = { path="../sdk", version="0.0.1" }