[package]
name = "fvm_rs_sdk"
version = "1.0.0"
authors = ["Protocol Labs", "Polyphene <contact@polyphene.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "This crate provides an interface for developers to build actors to be deployed on the Filecoin chain."
readme = "README.md"
homepage = "http://fvm.filecoin.io"
keywords = ["fvm", "sdk", "macro"]
categories = ["api-bindings"]

[dependencies]
anyhow = "^1.0.58"
cid = { version = "^0.8.4", default-features = false }
fvm_ipld_blockstore = "^0.1.1"
fvm_ipld_encoding = "^0.2.2"
fvm_shared = "^0.8.0"
fvm_sdk = { version = "^2.0.0-alpha.1", features = ["testing"] }
fvm_rs_sdk_macro = { path = "../macro", version = "1.0.0" }
thiserror = "^1.0.31"