[package]
name = "sdk_example_actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fvm_rs_sdk = "0.0.1"

[build-dependencies]
wasm-builder = "3.0.1"

[patch.crates-io]
fvm_rs_sdk = { path = "../../sdk" }
fvm_ipld_encoding = { path = "../../ref-fvm/ipld/encoding" }
fvm_shared = { path = "../../ref-fvm/shared" }
fvm_ipld_blockstore = { path = "../../ref-fvm/ipld/blockstore" }